@@ -17,6 +17,7 @@
  */
 package org.owasp.dependencycheck.utils;
 
+import java.lang.reflect.InvocationTargetException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -49,7 +50,7 @@ public final class H2DBShutdownHookFactory {
         try {
             final String className = settings.getString(Settings.KEYS.H2DB_SHUTDOWN_HOOK, H2DBCleanupHook.class.getName());
             final Class<?> type = Class.forName(className);
-            return (H2DBShutdownHook) type.newInstance();
+            return (H2DBShutdownHook) type.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             LOGGER.debug("Failed to instantiate {}, using default shutdown hook instead", ex);
             return new H2DBCleanupHook();
